# regecs

./: .gitignore  .gitlab-ci.yml  Cargo.toml  LICENSE.txt  README.MD  rustfmt.toml
.github/workflows/: development.yml  release.yml
codegen/: Cargo.toml
codegen/src/: clear.rs  dispatch.rs  fields_enum.rs  impl.rs  lib.rs  new_impl.rs  object_impl.rs
codegen/src/new_impl/: build_arguments.rs  inner.rs  mod.rs  trait_body.rs
core/: Cargo.toml
core/src/: component.rs  entity.rs  event.rs  lib.rs  macros.rs  object.rs  property.rs  scene.rs  system.rs
core/src/component/: attachments.rs  basic_pool.rs  grouped_pool.rs  interface.rs  mod.rs
core/src/component/pool/: basic_pool.rs  grouped_pool.rs  interface.rs  mod.rs
core/src/object/: factory.rs  interface.rs  mod.rs  registry.rs  storage.rs
core/src/reflection/: class.rs  interface.rs  mod.rs  property.rs
core/src/reflection/property/: config.rs  mod.rs
core/src/reflection/property1/: config.rs  mod.rs
core/src/scene/: core.rs  event.rs  interface.rs  mod.rs  state.rs
core/src/system/: interface.rs  mod.rs  object_registry.rs
testprog/: Cargo.toml
testprog/src/: main.rs
