[package]
name = "regecs-codegen"
version = "1.0.0"
authors = ["Yuri Edward <yuri6037@outlook.com>"]
edition = "2021"
description = "Code generation macros for REGECS"
license = "BSD-3-Clause"
repository = "https://gitlab.com/bp3d/regecs"
readme = "../README.MD"
keywords = ["rust", "extended", "generic", "ecs"]
categories = ["game-development", "rust-patterns"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc_macro = true

[dependencies]
quote = "1.0"
syn = { version = "1.0", features = ["full"] }
proc-macro2 = "1.0.26"
