[package]
name = "regecs"
version = "0.1.0"
authors = ["Yuri Edward <yuri6037@outlook.com>"]
edition = "2018"
description = "Rust Extended Generic ECS (REGECS)"
license = "BSD-3-Clause"
repository = "https://gitlab.com/bp3d/regecs"
readme = "../README.MD"
keywords = ["rust", "extended", "generic", "ecs"]
categories = ["game-development", "rust-patterns"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
