[package]
name = "regecs"
version = "1.0.0"
authors = ["Yuri Edward <yuri6037@outlook.com>"]
edition = "2021"
description = "Rust Extended Generic ECS (REGECS)"
license = "BSD-3-Clause"
repository = "https://gitlab.com/bp3d/regecs"
readme = "../README.MD"
keywords = ["rust", "extended", "generic", "ecs"]
categories = ["game-development", "rust-patterns"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bpx = { version = "3.0.0" }
